--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -50,6 +50,7 @@
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/auctions-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
+    <script src="{{STATIC_URL}}js/advertising/stats.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript" ></script>
 {% endblock %}
 
@@ -80,6 +81,9 @@
                         </li>
                         <li>
                             <a>View my order history</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'advertising_setup' %}">Deposit funds for advertising</a>
                         </li>
                     </ul>
                 </div>
@@ -115,13 +119,17 @@
     <div class="tabs-container">
         <ul class="tabs" data-page-id="account">
             <li class="current" data-tab-id="reminder"><span>Reminder</span></li>
-            <li  data-tab-id="in-the-loop"><span>In the Loop</span></li>
+            <li data-tab-id="in-the-loop"><span>In the Loop</span></li>
+            <li data-tab-id="advertising-stats"><span>Advertising Stats</span></li>
         </ul>
         <div class="box visible">
             {% include 'accounts/_reminder_events_table.html' %}                            
         </div>
         <div class="box">
             {% include 'accounts/_in_the_loop_events_table.html' %}
+        </div>
+        <div class="box advertising-stats">
+            {% include 'advertising/stats/list.html' %}
         </div>
     </div>
 
