--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -192,13 +192,7 @@
                                     <input type="file" name="advertising_image.{{advertising_type.id}}">
                                 </td>
                                 <td>
-                                    <span {% if advertising_type.reviewed %}class="reviewed"{% endif %}>
-                                        {% if advertising_type.reviewed %}
-                                            Good
-                                        {% else %}
-                                            Review
-                                        {% endif %}
-                                    </span>
+                                    
                                 </td>
                             </tr>
                         {% endfor %}
@@ -236,9 +230,10 @@
                         <div class="budget">
                             <table>
                                 <tr>
-                                    <td>Budget:</td>
+                                    <td>Budget(CAD):</td>
                                     <td>
                                         <input type="text" name="budget" value="0.0">
+
                                         <input type="hidden" name="budget_currency" value="CAD">
                                     </td>
                                     <td>
@@ -264,7 +259,7 @@
                                 <tr>
                                     <td>
                                         <div class="checkbox">
-                                            <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal">
+                                            <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal" checked="checked" >
                                             <label for="payment_paypal_id"></label>
                                             <label for="payment_paypal_id">
                                                 <img src="{{ STATIC_URL }}/images/featured/paypal.png"/>
@@ -272,8 +267,8 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox">
-                                            <input id="payment_visa_id" type="radio" name="payment_system" value="visa">
+                                        <div class="checkbox disabled">
+                                            <input id="payment_visa_id" type="radio" name="payment_system" value="visa" disabled>
                                             <label for="payment_visa_id"></label>
                                             <label for="payment_visa_id">
                                                 <img src="{{ STATIC_URL }}/images/featured/visa.png"/>
@@ -281,8 +276,8 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox">
-                                            <input id="payment_email_money_id" type="radio" name="payment_system" value="email_money_transfer">
+                                        <div class="checkbox disabled">
+                                            <input id="payment_email_money_id" type="radio" name="payment_system" value="email_money_transfer" disabled>
                                             <label for="payment_email_money_id"></label>
                                             <label for="payment_email_money_id">
                                                 <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png"/>
@@ -290,8 +285,8 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="checkbox">
-                                            <input id="payment_master_card_id" type="radio" name="payment_system" value="master_card">
+                                        <div class="checkbox disabled">
+                                            <input id="payment_master_card_id" type="radio" name="payment_system" value="master_card" disabled>
                                             <label for="payment_master_card_id"></label>
                                             <label for="payment_master_card_id">
                                                 <img src="{{ STATIC_URL }}/images/featured/master_card.png"/>
