--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -1,5 +1,3 @@
-{% load advertising_tags %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
 <head>
@@ -72,46 +70,14 @@
         
         <div class="content-wrapper">
             {% block page %}{% endblock %}
-            {% block advertising %}
-                    {% random %}
-                        <div class="advertising-right-container">
-                            <div class="advertising-right">
-                                {% advertising "300x250" %}
-                            </div>
-                            <div class="advertising-right">
-                                {% advertising "300x600" %} 
-                            </div>
-                            <div class="advertising-right">
-                                {% advertising "300x100" %}
-                            </div>
-                        </div>
-                    {% or %}
-                        <div class="advertising-right-container">
-                            <div class="advertising-right">
-                                {% advertising "300x250" %}
-                            </div>
-                            <div class="advertising-right">
-                                {% advertising "300x250" %}
-                            </div>
-                            <div class="advertising-right">
-                                {% advertising "300x250" %}
-                            </div>
-                        </div>                    
-                    {% endrandom %}                    
-                </div>
-            {% endblock%}
+            {% block advertising %}{% endblock%}
             <div class="clr"></div>
         </div>
     </div>
 
     <div class="footer-wrapper" data-no-turbolink>
         <div class="footer-container">
-            <div class="footer-ads-wrapper">
-                <div class="footer-ads-container">
-                    {% advertising "728x90" %}
-                </div>
-                <div class="clr"></div>
-            </div>
+            {% block advertising_footer %}{% endblock %}            
         </div>
     </div>
 
