--- a/alpha/accounts/templates/venue_accounts/create_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/create_venue_account.html
@@ -9,11 +9,23 @@
     <link href="{{STATIC_URL}}ajaxuploader/css/fileuploader.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript" src="{{STATIC_URL}}fancybox/jquery.fancybox.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
+    
+    <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
+
     <script type="text/javascript">
         var crsf_token = "{{ csrf_token }}";
+        {% if request.location %}
+            window.user_lat = {{ request.location.0 }};
+            window.user_lng = {{ request.location.1 }};
+        {% endif %}
     </script>
+
+    <script src="{{STATIC_URL}}js/accounts/create-venue-page.js" type="text/javascript" ></script>
     {{ form.media.js }}
 {% endblock %}
 
@@ -39,6 +51,11 @@
                                 <li id="all-info">
                                     {% for error in form.non_field_errors %}
                                         <span class="error">{{ error }}</span>
+                                    {% endfor %}
+                                </li>
+                                <li id="all-info">
+                                    {% for error in form.venue_name.errors %}
+                                    <span class="error">{{ error }}</span>
                                     {% endfor %}
                                 </li>
                                 <li id="all-info">
@@ -92,6 +109,22 @@
                     <form method="post" name="reminder-options" >
                         {% csrf_token %}
                         <table class="edit-contact-info-table options options-white">
+                            <tr>
+                                <td>
+                                    <img src="{{ STATIC_URL }}/images/map.png"/>
+                                </td>
+                                <td>
+                                    Venue:
+                                </td>
+                                <td class="place-td">
+                                    {{ form.place }}
+                                    <a href="javascript:void;" class="show-map">show on map</a> 
+                                    <div>
+                                        <div class="location_map">{{form.location}}</div>                                                
+                                    </div>
+                                </td>
+
+                            </tr>
                             <tr>
                                 <td>
                                     <img src="{{ STATIC_URL }}/images/phone-profile_icon.png"/>
