--- a/alpha/event/templates/featured/featured_event.html
+++ b/alpha/event/templates/featured/featured_event.html
@@ -9,9 +9,9 @@
         <a href="{% url 'event_view_featured' event.slug %}">
             <div class="featured-img-wrapper">
                 {% if event.picture %}
-                    <img src="{% cropped_thumbnail event "cropping" width=154 %}" height="153px" weight="154px">
+                    <img src="{% cropped_thumbnail event "cropping" width=154 %}" height="153px" width="154px">
                 {% else %}
-                    <img src="/static/images/default-event.jpg" height="153px" weight="154px">
+                    <img src="/static/images/default-event.jpg" height="153px" width="154px">
                 {% endif %}
             </div>
             <div class="featured-img-details">
