Add venue form is finished

--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -80,7 +80,7 @@
                             <a href="{% url 'in_the_loop_settings' %}">Edit In the Loop tags</a>
                         </li>
                         <li>
-                            <a>View my order history</a>
+                            <a href="{% url 'account_orders' %}">View my order history</a>
                         </li>
                         <li>
                             <a href="{% url 'advertising_setup' %}">Deposit funds for advertising</a>
