--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -152,8 +152,7 @@
                                 Map:
                             </td>
                             <td>
-                                <div id="venue_account_map" class="map">
-                                </div>
+                                <div id="venue_account_map" class="map"></div>
                             </td>
                         </tr>
                     </table>
