--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -26,6 +26,13 @@
     <script src="{{STATIC_URL}}js/messages.js" type="text/javascript"></script>
     {% include 'django_facebook/_facebook_js.html' %}
 
+    <!-- Search Pad Popup scripts -->
+    <link href="{{ STATIC_URL }}styles/searchpad/popup.css" type="text/css" rel="stylesheet" media="all" />
+    <script src="{{STATIC_URL}}js/searchpad/handlebars.runtime.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad//templates/searchpad.tmpl.js" type="text/javascript"></script>    
+
+    <!-- end -->
+
     {% block head %}
 
     {% endblock %}
@@ -108,6 +115,14 @@
             }
         }
     </script> 
-</div>  
+</div>
+
+<!-- Search Pad popup-->
+<div class=".search-pad-popup">
+    <div class=".search-pad-menu">
+        {% include 'events/_searchpad_left_menu.html' %}
+    </div>
+</div>
+<!-- end -->
 </body>
 </html>
