--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -10,7 +10,7 @@
     <ul class="main-menu">
         <li class="addBorderRight"><a href="{% url 'event_browse' %}">Home</a></li>
         <li class="addBorderRight">
-            <a href="javascript: void;" class="search-pad-popup-opener">
+            <a href="javascript: void;" class="search-pad-popup-open-button">
                 Browse Events
             </a>
         </li>
