--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -8,15 +8,19 @@
     <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/advertising.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
 
     <link type="text/css" href="{{STATIC_URL}}date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
+
     <link href="{{ STATIC_URL }}css/facebook.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
+
 
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
 
+    <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/restore-scroll-position.js"></script>
 
@@ -24,6 +28,15 @@
 
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/messages.js" type="text/javascript"></script>
+    {% include 'django_facebook/_facebook_js.html' %}
+
+    <!-- Search Pad Popup scripts -->
+    <link href="{{ STATIC_URL }}styles/searchpad/popup.css" type="text/css" rel="stylesheet" media="all" />
+    <script src="{{STATIC_URL}}js/searchpad/handlebars.runtime.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/templates/searchpad.tmpl.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/searchpad/searchpad-popup.js" type="text/javascript"></script>    
+
+    <!-- end -->
 
     {% block head %}
 
@@ -109,6 +122,11 @@
     </script> 
 </div>
 
+<div class="search-pad-popup">
+    <div class="loader">
+        <img src="/static/images/ajax-loader.gif" />
+    </div>
+</div>
 
 </body>
 </html>
