--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.8.23.custom.min.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
 
     <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
@@ -32,9 +33,19 @@
 
     <!-- Search Pad Popup scripts -->
     <link href="{{ STATIC_URL }}styles/searchpad/popup.css" type="text/css" rel="stylesheet" media="all" />
-    <script src="{{STATIC_URL}}js/searchpad/handlebars.runtime.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/templates/searchpad.tmpl.js" type="text/javascript"></script>    
-    <script src="{{STATIC_URL}}js/searchpad/searchpad-popup.js" type="text/javascript"></script>    
+    <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/search_tags.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
+
+    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/searchpad-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
 
     <!-- end -->
 
