--- a/alpha/event/static/styles/browse/event_details.css
+++ b/alpha/event/static/styles/browse/event_details.css
@@ -88,6 +88,8 @@
     min-width: 30px;
     height:100%;
     display: inline-block;
+    vertical-align: middle;
+    line-height: 22px;
 }
 
 .event-details-block .event-details .event-actions td a iframe {
@@ -110,6 +112,7 @@
 .event-details-block .event-details .event-actions td a .fb-like {
     left: 22px;
     max-height: 17px;
+    top: 2px;
 }
 
 .event-details-block .event-details .event-actions td a:hover {
@@ -173,8 +176,7 @@
 
 .in-the-loop-tags-popup .tag {
     font-size: 1.2em;
-    padding-left:10px;
-    padding-right: 10px;
+    padding: 5px 10px;
     margin-bottom: 5px;
     margin-right: 5px;
 }
@@ -184,6 +186,7 @@
 }
 .in-the-loop-tags-popup .add-in-the-loop { 
     font-size:1.5em;
+    padding: 5px 10px;
 }
 
 #venue_map {
