--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -2,34 +2,38 @@
 
 <!-- Search Pad popup-->
 <!--div class="search-pad-popup"-->
-    <div class="search-pad-menu">
-        {% include 'events/_searchpad_left_menu.html' %}
-    </div>
-    <div class="search-pad-content">
-        {% include 'events/_searchpad_datetime_menu.html' %}
+    <div class="search-pad-content-wrapper">    
+        <div class="search-pad-menu">
+            {% include 'events/_searchpad_left_menu.html' %}
+        </div>
+        <div class="search-pad-content">
+            {% include 'events/_searchpad_popup_datetime_menu.html' %}
 
-        <ul id="searchTags" class="tagit ui-widget ui-widget-content ui-corner-all">
-            {% for tag in eventsFilter.search_tags %}
-                <li data-remove-url="{{ tag.remove_url }}" class="tagit-choice ui-widget-content ui-state-default ui-corner-all tagit-choice-editable">
-                    <span class="tagit-label">{{ tag.name }}</span>
-                    <a class="tagit-close">
-                        <span class="text-icon">×</span>
-                        <span class="ui-icon ui-icon-close"></span>
-                    </a>
-                </li>
-            {% endfor %}
-            <span class="search-button"></span>
-        </ul>
-        {% include 'events/_event_details.html' %}
+            <ul id="searchTags" class="tagit ui-widget ui-widget-content ui-corner-all">
+                {% for tag in eventsFilter.search_tags %}
+                    <li data-remove-url="{{ tag.remove_url }}" class="tagit-choice ui-widget-content ui-state-default ui-corner-all tagit-choice-editable">
+                        <span class="tagit-label">{{ tag.name }}</span>
+                        <a class="tagit-close">
+                            <span class="text-icon">×</span>
+                            <span class="ui-icon ui-icon-close"></span>
+                        </a>
+                    </li>
+                {% endfor %}
+                <span class="search-button"></span>
+            </ul>
+            {% include 'events/_event_details.html' %}
+        </div>
+        <div class="clr">
+        </div>
     </div>
     <div class="search-pad-advertising">
         {% random %}
-            <div class="advertising-container">
-                {% advertising "300x600" %}
+            <div class="advertising-container">                
+                {% advertising_group "300x600" %}
             </div>
         {% or %}
             <div class="advertising-container">
-                {% advertising_group "300x250|300x250" "simple" %}
+                {% advertising_group "300x250|300x250" %}
             </div>
         {% endrandom %}
     </div>
