--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -28,6 +28,7 @@
     <script src="{{STATIC_URL}}js/validate.js" type="text/javascript"></script>
 
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/accounts/choose-account-context.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/messages.js" type="text/javascript"></script>
     {% include 'django_facebook/_facebook_js.html' %}
 
