--- a/alpha/event/templates/events/_browse_left_menu.html
+++ b/alpha/event/templates/events/_browse_left_menu.html
@@ -61,10 +61,10 @@
             {% if tags|length > 21 %}
                 <div class="more-button">
                     more
-                </li>
-                <li class="less-button">
+                </div>
+                <div class="less-button">
                     less
-                </li>
+                </div>
             {% endif %}
 
         </ul>
