--- a/alpha/event/templates/events/_browse_events_list.html
+++ b/alpha/event/templates/events/_browse_events_list.html
@@ -11,11 +11,13 @@
     {% for event in events %}    
         <div class="entry-info" data-no-turbolink>
             <div class="entry-img-prev">
-                {% if event.picture %}
-                    <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
-                {% else %}
-                    <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
-                {% endif %}
+                <a href="{% url 'event_view' event.slug %}">
+                    {% if event.picture %}
+                        <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
+                    {% else %}
+                        <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
+                    {% endif %}
+                </a>                
             </div>
             <div class="entry-details-wrapper">                                  
                 <div class="title">
@@ -29,21 +31,25 @@
                     {{event.nearest_start_time|just_time}} - {{event.nearest_end_time|just_time}}
                 </div>
                 <div class="entry-description">                    
-                    {{ event.venue.name }}, {{ event.venue.street }}, {{ event.venue.city.name_std }}
+                    {{ event.venue.name }}{% if event.venue.street %}, {{ event.venue.street }}{% endif %}, {{ event.venue.city.name_std }}
                 </div>                
             </div>
             <div class="auctions-wrapper">
                 <div class="auctions-content">
                     <div class="auctions-img-prev">
-                        {% if event.picture %}
-                            <img src="{% cropped_thumbnail event "cropping" width=87 %}" height="87px" weight="87px">
-                        {% else %}
-                            <img src="{{STATIC_URL}}images/default-event.jpg" height="87px" weight="87px">
-                        {% endif %}
+                        <a href="{% url 'event_view' event.slug %}">
+                            {% if event.picture %}
+                                <img src="{% cropped_thumbnail event "cropping" width=87 %}" height="87px" weight="87px">
+                            {% else %}
+                                <img src="{{STATIC_URL}}images/default-event.jpg" height="87px" weight="87px">
+                            {% endif %}
+                        </a>
                     </div>
                     <div class="auctions-details-wrapper">
                         <div class="title">
-                            {{event.name}}&nbsp;
+                            <a href="{% url 'event_view' event.slug %}">
+                                {{event.name}}&nbsp;
+                            </a>
                         </div>
                         <div class="entry-date">
                             {{event.nearest_start_time|date:"l, F d, Y"}}
